Connected to MySql Database.
Implemented classes and templates to control the authorization codes. Removed hard coded authorization codes as they are now stored in our MySQL db.

Features:

Admins now can generate codes in their dashboard.
- set the date of expiration
- title to identify the code
- and access control only allowing certain codes to provide access to admin controls or gate management.